--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
   
-    <!-- Container for XR DOM Overlay elements -->
+    <!-- Container for XR DOM Overlay elementss -->
     <div id="xr-ui-container"></div>
 
     <div id="app-root"></div>
